Fix z-index of .jarralax-table-cell when scrolling is set to 0

--- a/css/hero.css
+++ b/css/hero.css
@@ -2,15 +2,25 @@
 
 /* ---------- Jarallax ---------- */
 
-
 body {
     overscroll-behavior: none;
 }
 
-
 .jarallax {
+    position: relative;
+    z-index: 0;
     height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
+}
+
+.jarallax>.jarallax-img {
+    position: absolute;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 
 .jarallax-table {
@@ -36,6 +46,13 @@ body {
     font-size: 28px;
     font-weight: 800;
     margin: 18px 0;
+}
+
+/* Fix z-index when scrolling is set to 0  */
+.jarallax-table-cell h1,
+.jarallax-table-cell h2 {
+    position: relative;
+    z-index: 1;
 }
 
 @media screen and (max-width: 768px) {
